# cpptest

./: .gitignore  CMakeLists.txt
include/: header.h
src/: main.cpp  other.cpp  other2.cpp
